# ComfyUI-Mamad8-QwenEdit-fix

./: README.md  __init__.py  compiled_model_router.py  pyproject.toml  qwen_image_edit_2509_mamad8.json  weight_swapping_router.py
example_workflows/: qwen_image_edit_2509_mamad8.json
